# BotLogging

./: .gitignore  README.md  requirements.txt  setup.cfg
src/: botlog.py
src/botlog/: __init__.py  botlog.py  embed.py  logger.py
