[metadata]
name = botlog
version = 1.0.1
author = effprime
author_email = effprime@github.com
description = A logging interface for Discord bots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/effprime/BotLog
project_urls =
    Bug Tracker = https://github.com/effprime/BotLog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
